# gusto

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  audio_hijack_music.md  music_ensemble_infer.ipynb  pyproject.toml  setup.sh
.cursor/: settings.json
src/music_stem_separator/: __init__.py  analyzer.py  cli.py  config.py  separator.py
tests/: test_analyzer.py  test_separator.py
